[package]
name = "runtime-motion-patcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash40 = "1.3.0"
motion-patch = { git = "https://github.com/blu-dev/motion-patch", version = "0.1.0" }
motion_list_rs = "1.5.0"
once_cell = "1.18.0"
parking_lot = "0.12.1"
serde_yaml = "0.9.22"
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }
walkdir = "2.3.3"
